--- a/error.html
+++ b/error.html
@@ -18,14 +18,17 @@
     <div class="progress-bar" id="progressBar"></div>
     <header class="header">
         <div class="container header__block">
+            <div class="block__closed"></div>
+    
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
                     <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
-                    <li class="header__item"><a href="about.html" class="header__link">About me</a></li>
+                    <li class="header__item"><a href="about.html" class="header__link">About me</a>
+                    </li>
                     <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="news.html" class="header__link">News</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">News</a></li>
                     <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
-                    <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
+                    <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li
                 </ul>
             </nav>
     
@@ -38,10 +41,10 @@
             </div>
             <nav class="menu">
                 <ul class="menu__list list-reset">
-                    <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
+                    <li class="menu__item"><a href="img/" class="menu__link" >Home</a></li>
                     <li class="menu__item"><a href="about.html" class="menu__link">About me</a></li>
                     <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="news.html" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">News</a></li>
                     <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
                     <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
                 </ul>
@@ -69,29 +72,13 @@
                 <div class="footer__content">
                     <h2 class="footer__title">Alex.</h2>
                     <p class="footer__subtitle">
-                        I&nbsp;am a&nbsp;web developer living in&nbsp;Moldova. I&nbsp;have a&nbsp;very deep passion for
-                        Front End Development <span>❤</span>
-                        This site is&nbsp;made with a&nbsp;lot of&nbsp;love and passion.
+                        I am a web developer living in Moldova. I have a very deep passion for Front End Development ❤ This
+                        site is made with a lot of love and passion.
                     </p>
-                    <div class="footer__block-socials">
-                        <a href="https://www.instagram.com/" class="footer__link" target="_blank">
-                            <img src="img/instagram.svg" alt="Instagram">
-                        </a>
-                        <a href="https://github.com/SuhihAlex?tab=repositories" class="footer__link" target="_blank">
-                            <img src="img/github.svg" alt="GitHub">
-                        </a>
-                    </div>
                     <small>
-                        Portfolio v2.0
+                        <span>Portfolio v2.0</span>
                         © 2024 Alex
                     </small>
-                    <div class="header__block-language">
-                        <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
-                            <option class="header__language-lang active" value="en">EN</option>
-                            <option class="header__language-lang" value="ru">RU</option>
-                            <option class="header__language-lang" value="ro">RO</option>
-                        </select>
-                    </div>
                 </div>
             </div>
         </div>
