--- a/RU/vr.html
+++ b/RU/vr.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/settings.css">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="shortcut icon" href="../img/favicon.ico">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/settings.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/media.css">
     <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
@@ -20,16 +20,23 @@
         <div class="container header__block">
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
-                    <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
-                    <li class="header__item"><a href="about.html" class="header__link">About me</a></li>
-                    <li class="header__item"><a href="projects.html" class="header__link active">Projects</a></li>
-                    <li class="header__item"><a href="news.html" class="header__link">News</a></li>
-                    <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
-                    <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
+                    <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
+                    <li class="header__item"><a href="about.html" class="header__link">Обо мне</a></li>
+                    <li class="header__item"><a href="projects.html" class="header__link active">Проекты</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">Блог</a></li>
+                    <li class="header__item"><a href="contacts.html" class="header__link">Контакты</a></li>
                 </ul>
             </nav>
     
             <div class="lightning"></div>
+
+            <div class="header__block-language">
+                <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
+                    <option class="header__language-lang" value="ru">RU</option>
+                    <option class="header__language-lang" value="en">EN</option>
+                    <option class="header__language-lang" value="ro">RO</option>
+                </select>
+            </div>
     
             <div class="burger" onclick="burgerMenu()">
                 <div class="burger__bar"></div>
@@ -38,12 +45,11 @@
             </div>
             <nav class="menu">
                 <ul class="menu__list list-reset">
-                    <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="about.html" class="menu__link">About me</a></li>
-                    <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="news.html" class="menu__link">News</a></li>
-                    <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
-                    <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
+                    <li class="menu__item"><a href="index.html" class="menu__link">Главная</a></li>
+                    <li class="menu__item"><a href="about.html" class="menu__link">Обо мне</a></li>
+                    <li class="menu__item"><a href="projects.html" class="menu__link">Проекты</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">Блог</a></li>
+                    <li class="menu__item"><a href="contacts.html" class="menu__link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -66,28 +72,27 @@
                                 </clipPath>
                             </defs>
                         </svg>
-                        Back
+                        Назад
                     </a>
                 </div>
                 <div class="projects__preview-content block">
                     <div class="projects__block-img vr projects__preview-portfolio">
-                        <img src="img/projects/VR.png" alt="VR Nas">
+                        <img src="../img/projects/VR.png" alt="VR Nas">
                     </div>
                     <div class="projects__preview-block--descr">
                         <div class="projects__card-text projects__card-text--preview">
                             <h3 class="projects__card-title">VR Nas</h3>
                             <span class="projects__technology">Frontend</span>
                             <p class="projects__descr">
-                                The VR&nbsp;Nas website is&nbsp;a&nbsp;multi-page cutting edge technology website, HTML, CSS, JS&nbsp;and jQuery
-                                were
-                                used in&nbsp;this project.
+                                Веб-сайт VR&nbsp;Nas - это&nbsp;многостраничный сайт, посвященный передовым технологиям, HTML, CSS, JS&nbsp;и jQuery
+                                использовались в&nbsp;этом проекте.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
-                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="../img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
+                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                         <div class="projects__preview-block--btn">
@@ -97,7 +102,7 @@
                                         d="M3.16843 3.75095C3.16843 2.00397 4.58878 0.583618 6.33576 0.583618H25.3397C27.0867 0.583618 28.5071 2.00397 28.5071 3.75095V16.4203H25.3397V3.75095H6.33576V16.4203H3.16843V3.75095ZM0.00109863 18.9541C0.00109863 18.4295 0.426709 18.0039 0.951298 18.0039H30.7242C31.2488 18.0039 31.6744 18.4295 31.6744 18.9541C31.6744 21.0525 29.972 22.7549 27.8736 22.7549H3.8019C1.70354 22.7549 0.00109863 21.0525 0.00109863 18.9541ZM13.9077 9.34327L12.3735 10.8774L13.9077 12.4116C14.3729 12.8768 14.3729 13.6291 13.9077 14.0893C13.4425 14.5496 12.6902 14.5545 12.23 14.0893L9.85447 11.7138C9.38927 11.2486 9.38927 10.4964 9.85447 10.0361L12.23 7.66062C12.6952 7.19542 13.4474 7.19542 13.9077 7.66062C14.3679 8.12582 14.3729 8.87806 13.9077 9.33832V9.34327ZM19.4505 7.66062L21.826 10.0361C22.2912 10.5013 22.2912 11.2536 21.826 11.7138L19.4505 14.0893C18.9853 14.5545 18.233 14.5545 17.7728 14.0893C17.3125 13.6241 17.3076 12.8719 17.7728 12.4116L19.307 10.8774L17.7728 9.34327C17.3076 8.87807 17.3076 8.12582 17.7728 7.66557C18.238 7.20532 18.9902 7.20037 19.4505 7.66557V7.66062Z"
                                         fill="#161B22" />
                                 </svg>
-                                Demo
+                                Демо
                             </a>
                             <a href="https://github.com/SuhihAlex/VRNasProject" class="projects__preview-link" target="_blank">
                                 <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,43 +116,44 @@
                     </div>
                 </div>
                 <div class="projects__preview-block--features block">
-                    <h2 class="projects__preview-title">Main Features</h2>
+                    <h2 class="projects__preview-title">Основные характеристики</h2>
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
-                            Page Layout:
+                            Макет страницы:
                             <p class="projects__preview-descr">
-                                The page has a&nbsp;block structure with division into different sections to&nbsp;better organise the content.
+                                Страница имеет&nbsp;блочную структуру с разделением на различные секции для&nbsp;лучшей организации контента.
                             </p>
                         </li>
                         <li class="projects__preview-item">
-                            Use of Graphics:
+                            Использование графики:
                             <p class="projects__preview-descr">
-                                The page features images, videos and other media elements related to&nbsp;virtual reality.
+                                На странице представлены изображения, видеоролики и другие медиаэлементы, связанные с&nbsp;виртуальной реальностью.
                             </p>
                         </li>
                         <li class="projects__preview-item">
-                            Typography:
+                            Типография:
                             <p class="projects__preview-descr">
-                                Readable fonts are used with well-chosen size and spacing for easy reading.
+                                Для удобства чтения используются удобные шрифты с хорошо подобранными размерами и интервалами.
                             </p>
                         </li>
                         <li class="projects__preview-item">
-                            Interactive Elements:
+                            Интерактивные элементы:
                             <p class="projects__preview-descr">
-                                The page features interactive elements such as&nbsp;buttons, drop-down menus and virtual reality related controls.
+                                На странице представлены интерактивные элементы, такие как&nbsp;кнопки, выпадающие меню и элементы управления, связанные
+                                с виртуальной реальностью.
                             </p>
                         </li>
                         <li class="projects__preview-item">
-                            Cross-browser compatibility:
+                            Кроссбраузерная совместимость:
                             <p class="projects__preview-descr">
-                                The layout of&nbsp;the project is&nbsp;made taking into account cross-browser compatibility to&nbsp;ensure correct
-                                display in&nbsp;different web browsers.
+                                Верстка&nbsp;проекта&nbsp;выполнена с учетом кроссбраузерной совместимости, чтобы&nbsp;обеспечить корректное
+                                отображение в&nbsp;различных веб-браузерах.
                             </p>
                         </li>
                         <li class="projects__preview-item">
-                            SEO Optimisation:
+                            SEO-оптимизация:
                             <p class="projects__preview-descr">
-                                Semantic HTML tags are applied on&nbsp;the page to&nbsp;improve page indexing by&nbsp;search engines.
+                                Семантические HTML-теги применяются на&nbsp;странице для&nbsp;улучшения индексации страницы&nbsp;поисковыми системами.
                             </p>
                         </li>
                     </ul>
@@ -161,33 +167,25 @@
                 <div class="footer__content">
                     <h2 class="footer__title">Alex.</h2>
                     <p class="footer__subtitle">
-                        I&nbsp;am a&nbsp;web developer living in&nbsp;Moldova. I&nbsp;have a&nbsp;very deep passion for
-                        Front End Development <span>❤</span>
-                        This site is&nbsp;made with a&nbsp;lot of&nbsp;love and passion.
+                        Я веб-разработчик, живущий в Молдове. У меня очень глубокая страсть к Фронтенд Разработке <span>❤</span> Этот сайт сделан
+                        с большой любовью и страстью.
                     </p>
                     <div class="footer__block-socials">
                         <a href="https://www.instagram.com/" class="footer__link" target="_blank">
-                            <img src="img/instagram.svg" alt="Instagram">
+                            <img src="../img/instagram.svg" alt="Instagram">
                         </a>
                         <a href="https://github.com/SuhihAlex?tab=repositories" class="footer__link" target="_blank">
-                            <img src="img/github.svg" alt="GitHub">
+                            <img src="../img/github.svg" alt="GitHub">
                         </a>
                     </div>
                     <small>
                         Portfolio v2.0
                         © 2024 Alex
                     </small>
-                    <div class="header__block-language">
-                        <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
-                            <option class="header__language-lang active" value="en">EN</option>
-                            <option class="header__language-lang" value="ru">RU</option>
-                            <option class="header__language-lang" value="ro">RO</option>
-                        </select>
-                    </div>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
