--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/settings.css">
-    <link rel="stylesheet" href="../css/font.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="about__page-block--content block">
                     <div class="about__page-block--img">
-                        <img src="../img/2024-04-27_01-18-29-028.jpg" alt="Foto">
+                        <img src="img/2024-04-27_01-18-29-028.jpg" alt="Foto">
                     </div>
                     <div class="about__page-content">
                         <p class="about__page-content--descr" data-lang-key="about_text">
@@ -107,26 +107,26 @@
                             <h4 class="about__page-title--name" data-lang-key="skills">Skills</h4>
                         </div>
                         <div class="about__page-skills">
-                            <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                            <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                            <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                            <img src="../img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
-                            <img src="../img/nodejs_plain_wordmark_logo_icon_146410.svg" alt="NodeJS">
-                            <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
-                            <img src="../img/bootstrap_plain_wordmark_logo_icon_146620.svg" alt="Bootstrap">
-                            <img src="../img/git_plain_wordmark_logo_icon_146508.svg" alt="Git">
-                            <img src="../img/gitlab_plain_wordmark_logo_icon_146502.svg" alt="GitLab">
-                            <img src="../img/gulp_plain_logo_icon_146485.svg" alt="Gulp">
-                            <img src="../img/sass_original_logo_icon_146350.svg" alt="SASS">
-                            <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                            <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                            <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                            <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                            <img src="img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
+                            <img src="img/nodejs_plain_wordmark_logo_icon_146410.svg" alt="NodeJS">
+                            <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                            <img src="img/bootstrap_plain_wordmark_logo_icon_146620.svg" alt="Bootstrap">
+                            <img src="img/git_plain_wordmark_logo_icon_146508.svg" alt="Git">
+                            <img src="img/gitlab_plain_wordmark_logo_icon_146502.svg" alt="GitLab">
+                            <img src="img/gulp_plain_logo_icon_146485.svg" alt="Gulp">
+                            <img src="img/sass_original_logo_icon_146350.svg" alt="SASS">
+                            <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                         </div>
                     </div>
                     <div class="about__page-block--socials">
                         <a href="https://www.instagram.com/" class="about__page-link" target="_blank">
-                            <img src="../img/instagram.svg" alt="Instagram">
+                            <img src="img/instagram.svg" alt="Instagram">
                         </a>
                         <a href="https://github.com/SuhihAlex?tab=repositories" class="about__page-link" target="_blank">
-                            <img src="../img/github.svg" alt="GitHub">
+                            <img src="img/github.svg" alt="GitHub">
                         </a>
                     </div>
                 </div>
@@ -152,6 +152,6 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
