--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/settings.css">
-    <link rel="stylesheet" href="../css/font.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
@@ -33,7 +33,7 @@
             <div class="lightning"></div>
 
             <div class="header__block-language">
-                <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
+                <select class="header__language-select" id="langSelect">
                     <option class="header__language-lang" value="en">EN</option>
                     <option class="header__language-lang" value="ru">RU</option>
                     <option class="header__language-lang" value="ro">RO</option>
@@ -69,13 +69,13 @@
                     <p class="hero__subtitle" data-lang-key="heroSubtitle">I'm currently learning FrontEnd development</p>
                     <div class="hero__block-link">
                         <a href="https://www.instagram.com/alexandr_suhih/" class="hero__link" target="_blank">
-                            <img src="../img/instagram.svg" alt="Instagram">
+                            <img src="img/instagram.svg" alt="Instagram">
                         </a>
                         <a href="https://github.com/SuhihAlex?tab=repositories" class="hero__link" target="_blank">
-                            <img src="../img/github.svg" alt="GitHub">
+                            <img src="img/github.svg" alt="GitHub">
                         </a>
                         <a href="https://www.linkedin.com/in/alex-suhih-1a4821289/" class="hero__link" target="_blank">
-                            <img src="../img/linkedin.svg" alt="Linkedin">
+                            <img src="img/linkedin.svg" alt="Linkedin">
                         </a>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="projects__content">
                         <a href="portfolio.html" class="projects__card projects__card-portfolio">
                             <div class="projects__block-img portfolio">
-                                <img src="../img/projects/portfolio.png" alt="Portfolio">
+                                <img src="img/projects/portfolio.png" alt="Portfolio">
                             </div>
                             <div class="projects__card-text">
                                 <h3 class="projects__card-title" data-lang-key="portfolioTitle">Portfolio</h3>
@@ -117,16 +117,16 @@
                                     proficiency in technologies such as HTML, CSS, JS and Figma.
                                 </p>
                                 <div class="projects__block-icon">
-                                    <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                    <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                    <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                    <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                    <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                    <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                    <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
                         </a>
                         <a href="trinity.html" class="projects__card projects__card-trinity">
                             <div class="bkl projects__block-img">
-                                <img src="../img/projects/Trinity.png" alt="Trinity">
+                                <img src="img/projects/Trinity.png" alt="Trinity">
                             </div>
                             <div class="projects__card-text">
                                 <h3 class="projects__card-title" data-lang-key="trinityTitle">Trinity</h3>
@@ -136,17 +136,17 @@
                                     mastery of technologies such as HTML, CSS, JS, PHP and Figma.
                                 </p>
                                 <div class="projects__block-icon">
-                                    <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                    <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                    <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
-                                    <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                    <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                    <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                    <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                    <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
                         </a>
                         <a href="rivo.html" class="projects__card projects__card-rivo">
                             <div class="rivo projects__block-img">
-                                <img src="../img/projects/Rivo.png" alt="Rivo">
+                                <img src="img/projects/Rivo.png" alt="Rivo">
                             </div>
                             <div class="projects__card-text">
                                 <h3 class="projects__card-title" data-lang-key="rivoTitle">Rivo</h3>
@@ -156,11 +156,11 @@
                                     CSS, JS, jQuery, PHP and built using Gulp
                                 </p>
                                 <div class="projects__block-icon">
-                                    <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                    <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                    <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
-                                    <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                    <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                    <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                    <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                    <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
                         </a>
@@ -222,6 +222,6 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="module" src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
