--- a/error.html
+++ b/error.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/settings.css">
-    <link rel="stylesheet" href="../css/font.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
@@ -77,7 +77,7 @@
                 <div class="footer__content">
                     <h2 class="footer__title" data-lang-key="footerTitle">Alex.</h2>
                     <p class="footer__subtitle" data-lang-key="footerSubtitle">
-                        I am a web developer living in Moldova. I have a very deep passion for Front End Development ❤ This
+                        I am a web developer living in Moldova. I have a very deep passion for Front End Development <span>❤</span> This
                         site is made with a lot of love and passion.
                     </p>
                     <small>
@@ -89,6 +89,6 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
