--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/settings.css">
-    <link rel="stylesheet" href="../css/font.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
@@ -68,7 +68,7 @@
                 <div class="projects__page-content" id="projects-content">
                     <a href="portfolio.html" class="projects__card projects__card-animation">
                         <div class="projects__block-img portfolio">
-                            <img src="../img/projects/portfolio.png" alt="Portfolio">
+                            <img src="img/projects/portfolio.png" alt="Portfolio">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title" data-lang-key="portfolioTitle">Portfolio</h3>
@@ -79,16 +79,16 @@
                                 in&nbsp;technologies such as&nbsp;HTML, CSS, JS&nbsp;and Figma.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="trinity.html" class="projects__card projects__card-animation">
                         <div class="bkl projects__block-img">
-                            <img src="../img/projects/Trinity.png" alt="Trinity">
+                            <img src="img/projects/Trinity.png" alt="Trinity">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title" data-lang-key="trinityTitle">Trinity</h3>
@@ -98,17 +98,17 @@
                                 of&nbsp;technologies such as&nbsp;HTML, CSS, JS, PHP and Figma.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="rivo.html" class="projects__card projects__card-animation">
                         <div class="rivo projects__block-img">
-                            <img src="../img/projects/Rivo.png" alt="Rivo">
+                            <img src="img/projects/Rivo.png" alt="Rivo">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title" data-lang-key="rivoTitle">Rivo</h3>
@@ -119,17 +119,17 @@
                                 and built using Gulp
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="blanchard.html" class="projects__card projects__card-animation">
                         <div class="blanchard projects__block-img">
-                            <img src="../img/projects/Blanchard.png" alt="Blanchard">
+                            <img src="img/projects/Blanchard.png" alt="Blanchard">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Blanchard</h3>
@@ -138,14 +138,14 @@
                                 The Blanchard website is&nbsp;a&nbsp;single page website with animations, HTML and CSS were used in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
                             </div>
                         </div>
                     </a>
                     <a href="evklid.html" class="projects__card projects__card-animation">
                         <div class="evklid projects__block-img">
-                            <img src="../img/projects/Evklid.png" alt="Evklid">
+                            <img src="img/projects/Evklid.png" alt="Evklid">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Evklid</h3>
@@ -155,14 +155,14 @@
                                 in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
                             </div>
                         </div>
                     </a>
                     <a href="error.html" class="projects__card projects__card-animation">
                         <div class="finsweet projects__block-img">
-                            <img src="../img/projects/Finsweet.png" alt="Finsweet">
+                            <img src="img/projects/Finsweet.png" alt="Finsweet">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Finsweet</h3>
@@ -172,16 +172,16 @@
                                 in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="recidiviz.html" class="projects__card projects__card-animation">
                         <div class="recidiviz projects__block-img">
-                            <img src="../img/projects/Recidiviz.png" alt="Recidiviz">
+                            <img src="img/projects/Recidiviz.png" alt="Recidiviz">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Recidiviz</h3>
@@ -191,16 +191,16 @@
                                 in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="robin.html" class="projects__card projects__card-animation">
                         <div class="robin projects__block-img">
-                            <img src="../img/projects/Robin.png" alt="Robin W">
+                            <img src="img/projects/Robin.png" alt="Robin W">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Robin W</h3>
@@ -210,17 +210,17 @@
                                 JS, jQuery and the Gulp builder.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="vr.html" class="projects__card projects__card-animation">
                         <div class="vr projects__block-img">
-                            <img src="../img/projects/VR.png" alt="VR Nas">
+                            <img src="img/projects/VR.png" alt="VR Nas">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">VR Nas</h3>
@@ -230,17 +230,17 @@
                                 used in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
                     <a href="wave.html" class="projects__card projects__card-animation">
                         <div class="wave projects__block-img">
-                            <img src="../img/projects/W-Wave.png" alt="W-wave">
+                            <img src="img/projects/W-Wave.png" alt="W-wave">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">W-wave Radio</h3>
@@ -249,9 +249,9 @@
                                 W-wave Radio website is&nbsp;a&nbsp;one-page radio website, HTML, CSS were used in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                     </a>
@@ -277,6 +277,6 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
