--- a/wave.html
+++ b/wave.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/settings.css">
-    <link rel="stylesheet" href="../css/font.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
@@ -76,20 +76,20 @@
                     </a>
                 </div>
                 <div class="projects__preview-content block">
-                    <div class="projects__block-img evklid projects__preview-portfolio">
-                        <img src="../img/projects/Evklid.png" alt="Evklid">
+                    <div class="projects__block-img wave projects__preview-portfolio">
+                        <img src="img/projects/W-Wave.png" alt="W-Wave">
                     </div>
                     <div class="projects__preview-block--descr">
                         <div class="projects__card-text projects__card-text--preview">
-                            <h3 class="projects__card-title">Evklid</h3>
+                            <h3 class="projects__card-title">W-wave Radio</h3>
                             <span class="projects__technology">Layout</span>
                             <p class="projects__descr">
-                                The Evklid website is&nbsp;a&nbsp;single page website with animations, HTML and CSS were used
-                                in&nbsp;this project.
+                                W-wave Radio website is&nbsp;a&nbsp;one-page radio website, HTML, CSS were used in&nbsp;this project.
                             </p>
                             <div class="projects__block-icon">
-                                <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
                         <div class="projects__preview-block--btn">
@@ -101,7 +101,7 @@
                                 </svg>
                                 Demo
                             </a>
-                            <a href="https://github.com/SuhihAlex/EvklidProject" class="projects__preview-link" target="_blank">
+                            <a href="https://github.com/SuhihAlex/W-waveRadio" class="projects__preview-link" target="_blank">
                                 <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M12.8024 0C9.76273 0.000126048 6.82226 1.08185 4.50714 3.05163C2.19203 5.02141 0.653361 7.7507 0.166441 10.7511C-0.320479 13.7516 0.276128 16.8274 1.84951 19.4282C3.4229 22.029 5.87038 23.9851 8.75404 24.9465C9.39411 25.0585 9.63413 24.6745 9.63413 24.3384C9.63413 24.0344 9.61812 23.0263 9.61812 21.9542C6.40178 22.5463 5.5697 21.1702 5.31367 20.4501C5.02958 19.7498 4.57923 19.1292 4.00154 18.6419C3.55349 18.4019 2.91343 17.8098 3.98552 17.7938C4.39489 17.8382 4.78752 17.9807 5.13014 18.2091C5.47276 18.4375 5.75527 18.7451 5.95374 19.1059C6.12882 19.4204 6.36425 19.6973 6.64653 19.9207C6.92881 20.1441 7.25239 20.3096 7.59874 20.4077C7.94509 20.5058 8.30739 20.5346 8.66489 20.4924C9.02239 20.4503 9.36806 20.338 9.68209 20.162C9.7375 19.5112 10.0275 18.9028 10.4982 18.4499C7.64991 18.1299 4.67361 17.0257 4.67361 12.1293C4.65562 10.857 5.12509 9.62607 5.98574 8.68892C5.59438 7.58317 5.64017 6.36969 6.11375 5.29657C6.11375 5.29657 7.18582 4.96053 9.63411 6.60871C11.7288 6.03261 13.9401 6.03261 16.0348 6.60871C18.483 4.94454 19.5551 5.29657 19.5551 5.29657C20.0288 6.36967 20.0745 7.58318 19.6831 8.68892C20.5464 9.62447 21.0162 10.8565 20.9953 12.1293C20.9953 17.0417 18.0029 18.1299 15.1547 18.4499C15.4602 18.7595 15.6955 19.1313 15.8446 19.5399C15.9937 19.9486 16.0531 20.3845 16.0188 20.8181C16.0188 22.5303 16.0027 23.9064 16.0027 24.3385C16.0027 24.6745 16.2428 25.0746 16.8828 24.9466C19.7614 23.9773 22.2019 22.0166 23.7685 19.4145C25.3352 16.8124 25.9262 13.7381 25.4359 10.7406C24.9456 7.74305 23.406 5.0173 21.0919 3.04992C18.7778 1.08254 15.8398 0.00158084 12.8024 0Z"
@@ -116,11 +116,18 @@
                     <h2 class="projects__preview-title">Main Features</h2>
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
-                            Open Source:
+                            Responsive Design:
                             <p class="projects__preview-descr">
-                                The project is&nbsp;hosted on&nbsp;GitHub Pages, which may mean that it&nbsp;is&nbsp;open source and you can
-                                explore its
-                                code on&nbsp;GitHub.
+                                The website is&nbsp;designed to&nbsp;be&nbsp;responsive, ensuring a&nbsp;seamless experience across various devices and
+                                screen sizes.
+                            </p>
+                        </li>
+                        <li class="projects__preview-item">
+                            Modern UI/UX:
+                            <p class="projects__preview-descr">
+                                The website features a&nbsp;modern and clean user interface, providing a&nbsp;pleasant user experience. It&nbsp;uses
+                                a&nbsp;consistent color
+                                scheme and typography throughout the site.
                             </p>
                         </li>
                     </ul>
@@ -140,10 +147,10 @@
                     </p>
                     <div class="footer__block-socials">
                         <a href="https://www.instagram.com/" class="footer__link" target="_blank">
-                            <img src="../img/instagram.svg" alt="Instagram">
+                            <img src="img/instagram.svg" alt="Instagram">
                         </a>
                         <a href="https://github.com/SuhihAlex?tab=repositories" class="footer__link" target="_blank">
-                            <img src="../img/github.svg" alt="GitHub">
+                            <img src="img/github.svg" alt="GitHub">
                         </a>
                     </div>
                     <small>
@@ -154,6 +161,6 @@
             </div>
         </div>
     </footer>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
