--- a/RO/index.html
+++ b/RO/index.html
@@ -72,7 +72,7 @@
             <div class="container hero__block">
                 <div class="hero-container hero__block block">
                     <p class="hero__descr" data-lang-key="heroDescription">Salut, eu sunt</p>
-                    <h1 class="hero__title" data-lang-key="heroTitle" id="heroTitle">Alexandru</h1>
+                    <h1 class="hero__title hero__title-ro" data-lang-key="heroTitle" id="heroTitle">Alexandru</h1>
                     <p class="hero__subtitle" data-lang-key="heroSubtitle">Sunt dezvoltator Frontend</p>
                     <div class="hero__block-link">
                         <a href="https://www.instagram.com/alexandr_suhih/" class="hero__link" target="_blank">
@@ -186,7 +186,7 @@
             <div class="container">
                 <div class="contacts__block">
                     <div class="contacts__block-content">
-                        <h2 class="contacts__title" data-lang-key="contactsTitle" id="contactsTitle">Contactați-mă</h2>
+                        <h2 class="contacts__title contacts__title-ro" data-lang-key="contactsTitle" id="contactsTitle">Contactați-mă</h2>
                         <p class="contacts__subtitle" data-lang-key="contactsSubtitle">
                             Dacă sunteți interesat de munca mea sau doriți să lăsați un feedback despre acest site, sunt deschis
                             la
