Media.css modification

--- a/RO/index.html
+++ b/RO/index.html
@@ -110,8 +110,8 @@
         <section class="projects" id="projects">
             <div class="container">
                 <div class="projects__block">
-                    <div class="projects__recent-block">
-                        <h2 class="projects__title" data-lang-key="projectsSection" id="projectsTitle">Proiecte recente</h2>
+                    <div class="projects__recent-block projects__recent-block--ro">
+                        <h2 class="projects__title projects__title-ro" data-lang-key="projectsSection" id="projectsTitle">Proiecte recente</h2>
                         <a href="projects.html" class="projects__link" data-lang-key="seeAll">Vezi toate</a>
                     </div>
                     <div class="projects__content">
